<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mr_and_mrs_jones"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/einstellungen"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/mr_and_mrs_jones_25"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sommer_mom"
                android:fontFamily="serif"
                android:text="@string/barrierefreiheit"
                android:textColor="@color/un_graceful"
                android:textStyle="bold"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton1"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:checked="true"
                    android:fontFamily="serif"
                    android:text="@string/keine_einschraenkung"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:fontFamily="serif"
                    android:text="@string/mittlere_einschraenkung"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:fontFamily="serif"
                    android:text="@string/starke_einschraenkung"
                    android:textStyle="bold" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/mr_and_mrs_jones"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sommer_mom"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:text="@string/gehtempo"
                android:textColor="@color/un_graceful"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton4"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:fontFamily="serif"
                    android:text="@string/schnell_gehtempo"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:checked="true"
                    android:fontFamily="serif"
                    android:text="@string/mittel_gehtempo"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:fontFamily="serif"
                    android:text="@string/langsam_gehtempo"
                    android:textStyle="bold" />
            </RadioGroup>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/mr_and_mrs_jones"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sommer_mom"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:text="@string/optimierung"
                android:textColor="@color/un_graceful"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton7"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:checked="true"
                    android:fontFamily="serif"
                    android:textStyle="bold"
                    android:text="@string/schnelle_verbindung" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:fontFamily="serif"
                    android:textStyle="bold"
                    android:text="@string/wenig_umsteigen" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    style="@style/radioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/mr_and_mrs_jones"
                    android:fontFamily="serif"
                    android:textStyle="bold"
                    android:text="@string/kurzer_fussweg" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/mr_and_mrs_jones"
                    tools:visibility="visible" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sommer_mom"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:text="@string/verkehrsmittel"
                android:textColor="@color/un_graceful"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="205dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <CheckBox
                                    android:id="@+id/checkBox"
                                    style="@style/radioButtonStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/mr_and_mrs_jones"
                                    android:fontFamily="serif"
                                    android:text="@string/fernverkehr"
                                    android:textStyle="bold" />

                                <CheckBox
                                    android:id="@+id/checkBox1"
                                    style="@style/radioButtonStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/mr_and_mrs_jones"
                                    android:checked="true"
                                    android:fontFamily="serif"
                                    android:text="@string/regionalverkehr"
                                    android:textStyle="bold" />

                                <CheckBox
                                    android:id="@+id/checkBox3"
                                    style="@style/radioButtonStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/mr_and_mrs_jones"
                                    android:checked="true"
                                    android:fontFamily="serif"
                                    android:text="@string/sbahn"
                                    android:textStyle="bold" />

                                <CheckBox
                                    android:id="@+id/checkBox4"
                                    style="@style/radioButtonStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/mr_and_mrs_jones"
                                    android:checked="true"
                                    android:fontFamily="serif"
                                    android:text="@string/ubahn"
                                    android:textStyle="bold" />

                                <CheckBox
                                    android:id="@+id/checkBox5"
                                    style="@style/textViewStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/mr_and_mrs_jones"
                                    android:checked="true"
                                    android:fontFamily="serif"
                                    android:text="@string/tram"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="205dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/checkBox6"
                                style="@style/radioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/mr_and_mrs_jones"
                                android:checked="true"
                                android:fontFamily="serif"
                                android:text="@string/bus"
                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/checkBox7"
                                style="@style/radioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/mr_and_mrs_jones"
                                android:checked="true"
                                android:fontFamily="serif"
                                android:text="@string/ast"
                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/checkBox8"
                                style="@style/radioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/mr_and_mrs_jones"
                                android:checked="true"
                                android:fontFamily="serif"
                                android:text="@string/faehre"
                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/checkBox9"
                                style="@style/radioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/mr_and_mrs_jones"
                                android:checked="true"
                                android:fontFamily="serif"
                                android:text="@string/gondel"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="367dp" />

</androidx.constraintlayout.widget.ConstraintLayout>