<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/BootstrapButton18"
                style="@style/wrapping_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:elegantTextHeight="false"
                android:text="gfh"
                android:visibility="gone"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedCorners="true"
                app:typicon="ty_edit" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/BootstrapButton19"
                style="@style/wrapping_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:elegantTextHeight="false"
                android:text="gfh"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedCorners="true"
                app:typicon="ty_document_delete" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/BootstrapButton20"
                style="@style/wrapping_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:elegantTextHeight="false"
                android:text="gfh"
                android:visibility="gone"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedCorners="true"
                app:typicon="ty_document_add" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/mr_and_mrs_jones" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/datum" />

            <TextView
                android:id="@+id/textView17"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/abfahrt" />

            <TextView
                android:id="@+id/textView19"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                tools:text="Uhrzeit" />

            <TextView
                android:id="@+id/textView20"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                tools:text="Verspätung" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/ankunft" />

            <TextView
                android:id="@+id/textView22"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                tools:text="Uhrzeit" />

            <TextView
                android:id="@+id/textView23"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                tools:text="Verspätung" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/mr_and_mrs_jones" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/dauer" />

            <TextView
                android:id="@+id/textView25"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                tools:text="Dauer in h und min" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/mr_and_mrs_jones" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView92"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/start" />

            <TextView
                android:id="@+id/textView91"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                tools:text="Startlocation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView87"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/ziel" />

            <TextView
                android:id="@+id/textView88"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                tools:text="Ziellocation" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/mr_and_mrs_jones" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/preisstufe" />

            <TextView
                android:id="@+id/textView27"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                tools:text="Preisstufe" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/anz_umstiege" />

            <TextView
                android:id="@+id/textView29"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                tools:text="Anz. Umstiege" />
        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/mr_and_mrs_jones" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/erwachsene_anzahl" />

            <TextView
                android:id="@+id/textView84"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                tools:text="Anz. Erw." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView85"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/kinder_anzahl" />

            <TextView
                android:id="@+id/textView86"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                tools:text="Anz. Kinder" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/mr_and_mrs_jones" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:scrollbars="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/mr_and_mrs_jones" />

    </LinearLayout>

</androidx.cardview.widget.CardView>